--- a/index.html
+++ b/index.html
@@ -259,6 +259,24 @@
         <a href="https://www.nulled.to/topic/999322-ob-anom-buffalo-wild-wings-config-18k-cpm-proxyless-doesnt-ban-captures-points/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
+        <img src="https://i.imgur.com/s6dcHX5.png" alt="Reddit Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Post & Comment Karma</p>
+        <p>0 karma goes to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: User</p>
+        <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/k5V2idn.png" alt="Utomik Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: if trial, sub type & renew date</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Good w/ Free Proxies</p>
+        <p>Mail/User: Mail</p>
+        <a href="https://www.nulled.to/topic/1084131-ob-anom-utomik-cloud-gaming-captures-if-trial-sub-type-expiry-date-free-accounts-go-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
         <img src="https://i.imgur.com/eseO5TG.jpg" alt="Minecraft Config">
         <p>Proxies: Yes</p>
         <p>Capture: None</p>
@@ -294,15 +312,7 @@
         <p>Mail/User: Email</p>
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
-    <div class="configdesc">
-        <img src="https://i.imgur.com/s6dcHX5.png" alt="Reddit Config">
-        <p>Proxies: Yes</p>
-        <p>Capture: Post & Comment Karma</p>
-        <p>0 karma goes to free</p>
-        <p>CPM: Depends</p>
-        <p>Mail/User: User</p>
-        <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
-    </div>
+    
     <div class="configdesc">
         <img src="https://i.imgur.com/qhS3b1i.jpg" alt="ProGuides Config">
         <p>Proxies: No</p>
