fixed some stuff i think

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
         <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/k5V2idn.png" alt="Utomik Config">
+        <img src="https://i.imgur.com/4bWhOIV.png" alt="Utomik Config">
         <p>Proxies: Yes</p>
-        <p>Capture: if trial, sub type & renew date</p>
+        <p>Capture: sub type & renew date</p>
         <p>Free accounts go to free</p>
         <p>CPM: Good w/ Free Proxies</p>
         <p>Mail/User: Mail</p>
