--- a/index.html
+++ b/index.html
@@ -312,7 +312,15 @@
         <p>Mail/User: Email</p>
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
-    
+        <div class="configdesc">
+        <img src="https://i.imgur.com/onk9ziW.png" alt="UPlay Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Email Status & Games</p>
+        <p>Free to free, 2FA to 2Factor</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <a href="https://www.nulled.to/topic/1071520-ob-anom-origin-config-captures-email-status-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
+    </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/qhS3b1i.jpg" alt="ProGuides Config">
         <p>Proxies: No</p>
