Fixed info about a config

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
         <div class="configdesc">
-        <img src="https://i.imgur.com/onk9ziW.png" alt="UPlay Config">
+        <img src="https://i.imgur.com/RAFdVv8.png" alt="Origin Config">
         <p>Proxies: Yes</p>
         <p>Capture: Email Status & Games</p>
         <p>Free to free, 2FA to 2Factor</p>
