--- a/index.html
+++ b/index.html
@@ -339,16 +339,6 @@
         <p>Mail/User: User</p>
         <a href="https://www.nulled.to/topic/1074190-ob-anom-revolve-config-captures-store-credit-free-goes-to-free/" target="_blank">Download</a>
     </div>
-
-    <div class="configdesc">
-        <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
-        <p>Proxies: Yes</p>
-        <p>Capture: Sub Package</p>
-        <p>Free goes to free</p>
-        <p>CPM: 1000-3000</p>
-        <p>Mail/User: Mail</p>
-        <a href="https://www.nulled.to/topic/1066312-20-ob-anom-guesscom-captures-points-balance-free-goes-to-free/" target="_blank">Download</a>
-    </div>
     
     
     <h1 class="paid">Paid Configs</h1>
@@ -374,7 +364,7 @@
         <p>Acc w/o goes to free</p>
         <p>CPM: 400-5000</p>
         <p>Mail/User: User</p>
-        <button data-shoppy-product="hc7f3Ww" class="apaid">Buy [$7]</button>
+        <button data-shoppy-product="hc7f3Ww" class="apaid">Buy [$4]</button>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/E5Bs2qY.jpg" alt="Firehouse Subs Config">
@@ -384,6 +374,15 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
         <button data-shoppy-product="xax0uxE" class="apaid">Buy [$15]</button>
+    </div>
+        <div class="configdesc">
+        <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Store Credit</p>
+        <p>Free goes to free</p>
+        <p>CPM: 600-3000</p>
+        <p>Mail/User: Mail</p>
+        <button data-shoppy-product="c3OaFDv" class="apaid">Buy [$20]</button>
     </div>
 </body>
 </html>
