--- a/index.html
+++ b/index.html
@@ -384,5 +384,16 @@
         <p>Mail/User: Mail</p>
         <button data-shoppy-product="c3OaFDv" class="apaid">Buy [$20]</button>
     </div>
+    </div>
+        <div class="configdesc">
+        <img src="https://i.imgur.com/82WGgTm.jpg" alt="Codeacademy Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: if Pro Member</p>
+        <p>Free goes to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Mail</p>
+        <button data-shoppy-product="WOigf5i" class="apaid">Buy [$15]</button>
+    </div>
+   
 </body>
 </html>
