--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <p>Free goes to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
-        <button data-shoppy-product="WOigf5i" class="apaid">Buy [$15]</button>
+            <a class="apaid"<button data-shoppy-product="WOigf5i">Buy [$15]</button></a>
     </div>
    
 </body>
