--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <p>CPM: 600-6K</p>
             <p>Mail/User: Mail</p>
             <div class="lin2"></div>
-            <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$30]</button> 
+            <a class="apaid"<button data-shoppy-product="nfVQT1T">Buy [$30]</button></a>
             </div>
     </div>
         </div>
@@ -364,7 +364,7 @@
         <p>Acc w/o goes to free</p>
         <p>CPM: 400-5000</p>
         <p>Mail/User: User</p>
-        <button data-shoppy-product="hc7f3Ww" class="apaid">Buy [$4]</button>
+        <a class="apaid"<button data-shoppy-product="hc7f3Ww">Buy [$4]</button></a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/E5Bs2qY.jpg" alt="Firehouse Subs Config">
@@ -373,7 +373,7 @@
         <p>Free accounts go to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
-        <button data-shoppy-product="xax0uxE" class="apaid">Buy [$15]</button>
+        <a class="apaid"<button data-shoppy-product="xax0uxE">Buy [$15]</button></a>
     </div>
         <div class="configdesc">
         <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
@@ -382,7 +382,7 @@
         <p>Free goes to free</p>
         <p>CPM: 600-3000</p>
         <p>Mail/User: Mail</p>
-        <button data-shoppy-product="c3OaFDv" class="apaid">Buy [$20]</button>
+        <a class="apaid"<button data-shoppy-product="c3OaFDv">Buy [$20]</button></a>
     </div>
     </div>
         <div class="configdesc">
